--- a/textchange/static/textchange/css/mobile.css
+++ b/textchange/static/textchange/css/mobile.css
@@ -109,7 +109,7 @@
   margin-left: -43px;
   border-left: 1px solid #DBDBDB;
   cursor: pointer;
-  background-image: url("mag-glass.svg");
+  background-image: url("../imgs/mag-glass.svg");
   background-repeat: no-repeat;
   background-position: 10px 10px;
   text-indent: -100px;
@@ -180,7 +180,7 @@
   font-size: 16px;
   cursor: pointer;
   display: inline-block;
-  background-image: url("mag-glass.svg");
+  background-image: url("../imgs/mag-glass.svg");
   background-repeat: no-repeat;
   background-position: 10px 9px;
   line-height: 0px;
